change Phylum to Phylum or Division

--- a/app/views/curation_concerns/base/_metadata.html.erb
+++ b/app/views/curation_concerns/base/_metadata.html.erb
@@ -20,7 +20,7 @@
   <%= presenter.attribute_to_html(:decimal_latitude) %>
   <%= presenter.attribute_to_html(:decimal_longitude) %>
   <%= presenter.attribute_to_html(:kingdom) %>
-  <%= presenter.attribute_to_html(:phylum) %>
+  <%= presenter.attribute_to_html(:phylum, label: 'Phylum or Division') %>
   <%= presenter.attribute_to_html(:dwcclass, label: 'Class') %>
   <%= presenter.attribute_to_html(:order) %>
   <%= presenter.attribute_to_html(:family) %>
