additions to enable paleo collection

--- a/app/views/curation_concerns/base/_metadata.html.erb
+++ b/app/views/curation_concerns/base/_metadata.html.erb
@@ -32,5 +32,14 @@
   <%= presenter.attribute_to_html(:type_status) %>
   <%= presenter.attribute_to_html(:basis_of_record) %>
 
+  <%= presenter.attribute_to_html(:bed) %>
+  <%= presenter.attribute_to_html(:dwcmember) %>
+  <%= presenter.attribute_to_html(:formation) %>
+  <%= presenter.attribute_to_html(:group) %>
+  <%= presenter.attribute_to_html(:latest_age_or_highest_stage) %>
+  <%= presenter.attribute_to_html(:earliest_age_or_lowest_stage) %>
+  <%= presenter.attribute_to_html(:latest_period_or_highest_system) %>
+  <%= presenter.attribute_to_html(:earliest_period_or_lowest_system) %>
+
   </tbody>
 </table>
