--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -11,7 +11,7 @@
  
 <p>The <a href="http://www.indiana.edu/~cbrc/">Center for Biological Research Collections</a> (CBRC) is a consortium of research-based scientific collections at Indiana University: The <a href="http://www.bio.indiana.edu/faculty/facilities/herbarium.shtml">Indiana University Herbarium</a>, the <a href="http://www.indiana.edu/~palcoll/">Indiana University Paleontology Collection</a>, and the <a href="http://www.indiana.edu/~zooarch/home.php">William R. Adams Zooarchaeology Laboratory</a>.  The Center focuses on collections of biological specimens, including fossils and archaeological remains that have shared taxonomic, geographic, and temporal metadata requirements. The CBRC is funded by the College of Arts and Sciences, the Office for the Vice President for Research, the Department of Biology, the Department of Anthropology, and the Department of Geological Sciences to enhance collection-based research and education in diversity, zooarcheology, paleontology, and related disciplines by providing shared infrastructural and data management support.</p>
  
-<p>his repository was developed by the <a href="https://libraries.indiana.edu/">Indiana University Libraries</a>, in conjunction with the CBRC.</p>
+<p>This repository was developed by the <a href="https://libraries.indiana.edu/">Indiana University Libraries</a>, in conjunction with the CBRC.</p>
 
 
 <p>&nbsp;</p>
