--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,16 +1,16 @@
-<div id="branding-bar-v1" itemscope="itemscope" itemtype="http://schema.org/CollegeOrUniversity">
-  <div class="bar">
-    <div class="wrapper">
-      <h1 class="campus">
-        <a href="http://www.iu.edu" title="Indiana University">
-          <img src="//assets.iu.edu/brand/1.x/trident-large.png" height="73" width="64" alt=" " />
-          <span class="show-on-desktop" itemprop="name">Indiana University</span>
+<!-- brand -->
+<div id="branding-bar" itemscope="itemscope" itemtype="http://schema.org/CollegeOrUniversity" role="complementary" aria-labelledby="campus-name">
+  <div class="row pad">
+      <img src="//assets.iu.edu/brand/3.x/trident-large.png" alt="IU" />
+      <p id="iu-campus">
+        <a href="https://www.iu.edu" title="Indiana University">
+          <span id="campus-name" class="show-on-desktop" itemprop="name">Indiana University</span>
           <span class="show-on-tablet" itemprop="name">Indiana University</span>
-          <span class="show-on-mobile" itemprop="name">Indiana University</span>
+          <span class="show-on-mobile" itemprop="name">IU</span>
         </a>
-      </h1>
-    </div>
+      </p>
   </div>
 </div>
-<br/>
-<a href="/" class="institution_name"><%=t('sufia.product_name') %></a>
+  <div class="container-fluid bg-hdr">
+<h1><a href="/" class="institution_name">Imago</a></h1>
+</div>
