--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,34 @@
-<footer id="footer-v1" role="contentinfo" itemscope="itemscope" itemtype="http://schema.org/CollegeOrUniversity">
-  <div class="wrapper">
-    <p class="tagline">Fulfilling <span>the</span> Promise</p>
-    <p class="internal"><a href="http://go.iu.edu/4My" id="privacy-policy-link">Privacy Notice</a></p>
-    <p class="copyright">
-      <a href="http://www.iu.edu/" class="block-iu"><img src="//assets.iu.edu/brand/1.x/block-iu.png" height="26" width="22" alt="Block IU" /></a>
-			<span class="line-break">
-				<a href="http://www.iu.edu/copyright/index.shtml">Copyright</a> &#169; 2015			</span>
-      <span class="line-break">The Trustees of <a href="http://www.iu.edu/" itemprop="url"><span itemprop="name">Indiana University</span></a>,</span>
-      <span class="line-break"><a href="http://www.iu.edu/copyright/complaints.shtml">Copyright Complaints</a>, </span>
-      <span class="line-break">Sufia v<%= Sufia::VERSION %></span>
-    </p>
-  </div>
+<!-- footer --><!-- footer --><!-- footer --><!-- footer -->
+<div class="row bottom-nav">
+<div id="bottom-nav-columns" class="container">
+<ul>
+  <li>
+<a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1445604">
+    <img src="/assets/logo-nsf.png" alt="SNS Awards" />
+Some computing resources provided by NSF Awards ACI-1445604:</a>   <span><a href="http://jetstream-cloud.org/">Jetstream - A Self-Provisioned, Scalable Science and Engineering Cloud Environment</a> and <a href="https://www.xsede.org/">XSEDE</a></span>
+  </li>
+<li>
+<a href="http://jetstream-cloud.org/"><img src="/assets/logo-jetstream.png" alt="Jetstream partners and collaborators" /></a>
+</li>
+<li>
+  <a href="https://www.xsede.org/"><img src="/assets/logo-xsede.png" alt="xsede" /></a>
+</li>
+<li>
+  <a href="https://libraries.indiana.edu/"><img src="/assets//logo-libraries.png" alt="xsede" /></a>
+</li>
+</ul>
+</div>
+</div>
+<footer id="footer" role="contentinfo" itemscope="itemscope" itemtype="http://schema.org/CollegeOrUniversity">
+    <div class="row pad">
+        <p class="tagline">Fulfilling <span>the</span> Promise</p>
+        <p class="signature">
+            <a href="https://www.iu.edu" class="signature-link">Indiana University</a>
+        </p>
+        <p class="copyright">
+          <span class="copy"><img src="//assets.iu.edu/brand/2.x/trident-small.png" alt="Indiana University">
+        <a href="https://www.iu.edu/copyright/index.html">Copyright</a> &#169; <%= Time.current.year %> <span class="line-break-small">The Trustees of <a href="https://www.iu.edu/" itemprop="url"><span itemprop="name">Indiana University</span></a></span></span>
+      <span class="line-break"><a href="/privacy" id="privacy-policy-link">Privacy Notice</a> | <a href="https://accessibility.iu.edu" id="accessibility-link" title="Having trouble accessing this web page because of a disability? Visit this page for assistance.">Accessibility</a></span>
+        </p>
+    </div>
 </footer>
