--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,7 +28,7 @@ Some computing resources provided by NSF Awards ACI-1445604:</a>   <span><a href
         <p class="copyright">
           <span class="copy"><img src="//assets.iu.edu/brand/2.x/trident-small.png" alt="Indiana University">
         <a href="https://www.iu.edu/copyright/index.html">Copyright</a> &#169; <%= Time.current.year %> <span class="line-break-small">The Trustees of <a href="https://www.iu.edu/" itemprop="url"><span itemprop="name">Indiana University</span></a></span></span>
-      <span class="line-break"><a href="/privacy" id="privacy-policy-link">Privacy Notice</a> | <a href="https://accessibility.iu.edu" id="accessibility-link" title="Having trouble accessing this web page because of a disability? Visit this page for assistance.">Accessibility</a></span>
+      <span class="line-break"><a href="/privacy" id="privacy-policy-link">Privacy Notice</a> | <a href="https://accessibility.iu.edu/help" id="accessibility-link" title="Having trouble accessing this web page because of a disability? Visit this page for assistance.">Accessibility Help</a></span>
         </p>
     </div>
 </footer>
