add new fields for self-deposit

--- a/app/views/curation_concerns/base/_metadata.html.erb
+++ b/app/views/curation_concerns/base/_metadata.html.erb
@@ -41,5 +41,13 @@
   <%= presenter.attribute_to_html(:latest_period_or_highest_system) %>
   <%= presenter.attribute_to_html(:earliest_period_or_lowest_system) %>
 
+  <%= presenter.attribute_to_html(:institution_code) %>
+  <%= presenter.attribute_to_html(:occurrence_id) %>
+  <%= presenter.attribute_to_html(:country_code) %>
+  <%= presenter.attribute_to_html(:taxon_rank) %>
+  <%= presenter.attribute_to_html(:water_body) %>
+  <%= presenter.attribute_to_html(:location_remarks) %>
+  <%= presenter.attribute_to_html(:geodetic_datum) %>
+
   </tbody>
 </table>
