remove jetstream refs from UI

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,11 +5,8 @@
   <li>
 <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1445604">
     <img src="/assets/logo-nsf.png" alt="SNS Awards" />
-Some computing resources provided by NSF Awards ACI-1445604:</a>   <span><a href="http://jetstream-cloud.org/">Jetstream - A Self-Provisioned, Scalable Science and Engineering Cloud Environment</a> and <a href="https://www.xsede.org/">XSEDE</a></span>
+Some computing resources provided by NSF Awards ACI-1445604</a></span>
   </li>
-<li>
-<a href="http://jetstream-cloud.org/"><img src="/assets/logo-jetstream.png" alt="Jetstream partners and collaborators" /></a>
-</li>
 <li>
   <a href="https://www.xsede.org/"><img src="/assets/logo-xsede.png" alt="xsede" /></a>
 </li>
